cursor fix v1, caps & shift ok

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -45,6 +45,7 @@
     display: block;
 }
 
-.line span {
+.line pre {
     font-family: monospace;
+    display: inline;
 }
